--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -59,7 +59,41 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <button type="button" class="btn btn-primary">Choose File</button>
+                    <form>
+                        <div class="form-group">
+                            <label for="choosefile1">Choose File</label>
+                            <input type="file" class="form-control-file" id="choosefile1">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Submit Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal for adding instrument -->
+    <div class="modal fade" id="add-instrument" tabindex="-1" role="dialog" aria-labelledby="add-instrumentLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="add-instrumentLabel">Add New Instrument</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="instrumentInput1">Instrument Name</label>
+                            <input type="text" class="form-control" id="instrumentInput1">
+                            <label for="choosefile2">Choose File</label>
+                            <input type="file" class="form-control-file" id="choosefile2">
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -97,6 +131,8 @@
                     </tbody>
                 </table>
             </div>
+            <button id="add-instrument" type="button" class="btn btn-primary" data-toggle="modal"
+                data-target="#add-instrument">Add Instrument</button>
         </div>
         <div class="tab-pane fade" id="mixes" role="tabpanel" aria-labelledby="mixes-tab">...</div>
         <div class="tab-pane fade" id="contributions" role="tabpanel" aria-labelledby="contributions-tab">...</div>
