--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -2,145 +2,148 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>JamSesh - Studio</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Homepage-Nav.css">
-    <link rel="stylesheet" href="assets/css/Studio.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>JamSesh - Studio</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/Homepage-Nav.css">
+  <link rel="stylesheet" href="assets/css/Studio.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-        <div class="container"><a class="navbar-brand" href="#">JamSesh</a>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                </ul>
-                <span class="navbar-text actions">
-                    <a class="btn btn-light action-button" role="button" href="#">Log Out</a>
-                </span>
-            </div>
-        </div>
-    </nav>
-
-    <h1 id="studio-title" class="text-center">Username: Studio</h1>
-
-
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item">
-            <a class="nav-link active" id="composition-tab" data-toggle="tab" href="#composition" role="tab"
-                aria-controls="composition" aria-selected="true">Composition</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="mixes-tab" data-toggle="tab" href="#mixes" role="tab" aria-controls="mixes"
-                aria-selected="false">Mixes</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="contributions-tab" data-toggle="tab" href="#contributions" role="tab"
-                aria-controls="contributions" aria-selected="false">Contributions</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="settings-tab" data-toggle="tab" href="#settings" role="tab" aria-controls="settings"
-                aria-selected="false">Settings</a>
-        </li>
-    </ul>
-
-    <!-- Modal for Uploading new file -->
-    <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="uploadFileLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="uploadFileLabel">Upload New File</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="choosefile1">Choose File</label>
-                            <input type="file" class="form-control-file" id="choosefile1">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Submit Changes</button>
-                </div>
-            </div>
-        </div>
+  <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
+    <div class="container"><a class="navbar-brand" href="#">JamSesh</a>
+      <div class="collapse navbar-collapse" id="navcol-1">
+        <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        </ul>
+        <span class="navbar-text actions">
+          <a class="btn btn-light action-button" role="button" href="#">Log Out</a>
+        </span>
+      </div>
     </div>
+  </nav>
 
-    <!-- Modal for adding instrument -->
-    <div class="modal fade" id="add-instrument" tabindex="-1" role="dialog" aria-labelledby="add-instrumentLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="add-instrumentLabel">Add New Instrument</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="instrumentInput1">Instrument Name</label>
-                            <input type="text" class="form-control" id="instrumentInput1">
-                            <label for="choosefile2">Choose File</label>
-                            <input type="file" class="form-control-file" id="choosefile2">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Submit Changes</button>
-                </div>
-            </div>
+  <h1 id="studio-title" class="text-center">Username: Studio</h1>
+
+  <!-- <button type="button" class="btn btn-primary">
+    Favorite <span class="badge badge-light">4</span>
+  </button> -->
+
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="composition-tab" data-toggle="tab" href="#composition" role="tab"
+        aria-controls="composition" aria-selected="true">Composition</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="mixes-tab" data-toggle="tab" href="#mixes" role="tab" aria-controls="mixes"
+        aria-selected="false">Mixes</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="contributions-tab" data-toggle="tab" href="#contributions" role="tab"
+        aria-controls="contributions" aria-selected="false">Contributions</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="settings-tab" data-toggle="tab" href="#settings" role="tab" aria-controls="settings"
+        aria-selected="false">Settings</a>
+    </li>
+  </ul>
+
+  <!-- Modal for Uploading new file -->
+  <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="uploadFileLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="uploadFileLabel">Upload New File</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-    </div>
-
-    <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="composition" role="tabpanel" aria-labelledby="composition-tab">
-            <div id="studio-composition" class="table-responsive">
-                <table class="table table-hover">
-                    <thead class="thead-dark">
-                        <th scope="col">Instrument</th>
-                        <th scope="col">Composition</th>
-                    </thead>
-                    <tbody>
-                        <tr data-toggle="modal" data-target="#uploadFile">
-                            <th scope="row">Lead Guitar</th>
-                            <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-                        </tr>
-                        <tr data-toggle="modal" data-target="#uploadFile">
-                            <th scope="row">Bass Guitar</th>
-                            <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-                        </tr>
-                        <tr data-toggle="modal" data-target="#uploadFile">
-                            <th scope="row">Drums</th>
-                            <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-                        </tr>
-                        <tr data-toggle="modal" data-target="#uploadFile">
-                            <th scope="row">Rhythm Guitar</th>
-                            <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-                        </tr>
-                    </tbody>
-                </table>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="choosefile1">Choose File</label>
+              <input type="file" class="form-control-file" id="choosefile1">
             </div>
-            <button id="add-instrument" type="button" class="btn btn-primary" data-toggle="modal"
-                data-target="#add-instrument">Add Instrument</button>
+          </form>
         </div>
-        <div class="tab-pane fade" id="mixes" role="tabpanel" aria-labelledby="mixes-tab">...</div>
-        <div class="tab-pane fade" id="contributions" role="tabpanel" aria-labelledby="contributions-tab">...</div>
-        <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">...</div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Submit Changes</button>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <!-- Modal for adding instrument -->
+  <div class="modal fade" id="add-instrument" tabindex="-1" role="dialog" aria-labelledby="add-instrumentLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="add-instrumentLabel">Add New Instrument</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="instrumentInput1">Instrument Name</label>
+              <input type="text" class="form-control" id="instrumentInput1">
+              <label for="choosefile2">Choose File</label>
+              <input type="file" class="form-control-file" id="choosefile2">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Submit Changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="composition" role="tabpanel" aria-labelledby="composition-tab">
+      <div id="studio-composition" class="table-responsive">
+        <table class="table table-hover">
+          <thead class="thead-dark">
+            <th scope="col">Instrument</th>
+            <th scope="col">Composition</th>
+          </thead>
+          <tbody>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Lead Guitar</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Bass Guitar</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Drums</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Rhythm Guitar</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <button id="add-instrument" type="button" class="btn btn-primary" data-toggle="modal"
+        data-target="#add-instrument">Add Instrument</button>
+    </div>
+    <div class="tab-pane fade" id="mixes" role="tabpanel" aria-labelledby="mixes-tab">...</div>
+    <div class="tab-pane fade" id="contributions" role="tabpanel" aria-labelledby="contributions-tab">...</div>
+    <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">...</div>
+  </div>
+
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
