--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -31,6 +31,7 @@
     Favorite <span class="badge badge-light">4</span>
   </button> -->
 
+  <!-- Tab Navbar -->
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" id="composition-tab" data-toggle="tab" href="#composition" role="tab"
@@ -49,6 +50,50 @@
         aria-selected="false">Settings</a>
     </li>
   </ul>
+
+  <!-- Navbar Tab Content -->
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="composition" role="tabpanel" aria-labelledby="composition-tab">
+      <div id="studio-composition" class="table-responsive">
+        <table class="table table-hover">
+          <thead class="thead-dark">
+            <th scope="col">Instrument</th>
+            <th scope="col">Composition</th>
+          </thead>
+          <tbody>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Lead Guitar</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Bass Guitar</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Drums</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+            <tr data-toggle="modal" data-target="#uploadFile">
+              <th scope="row">Rhythm Guitar</th>
+              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <button id="add-instrument" type="button" class="btn btn-primary" data-toggle="modal"
+        data-target="#add-instrument">Add Instrument</button>
+    </div>
+    <div class="tab-pane fade" id="mixes" role="tabpanel" aria-labelledby="mixes-tab">...</div>
+    <div class="tab-pane fade" id="contributions" role="tabpanel" aria-labelledby="contributions-tab">...</div>
+    <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+      <form>
+        <div class="form-group">
+          <label for="studio-name-input">Studio Name</label>
+          <input type="text" class="form-control" id="studio-name-input" placeholder="Studio"> </input>
+        </div>
+      </form>
+    </div>
+  </div>
 
   <!-- Modal for Uploading new file -->
   <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="uploadFileLabel"
@@ -104,42 +149,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="composition" role="tabpanel" aria-labelledby="composition-tab">
-      <div id="studio-composition" class="table-responsive">
-        <table class="table table-hover">
-          <thead class="thead-dark">
-            <th scope="col">Instrument</th>
-            <th scope="col">Composition</th>
-          </thead>
-          <tbody>
-            <tr data-toggle="modal" data-target="#uploadFile">
-              <th scope="row">Lead Guitar</th>
-              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-            </tr>
-            <tr data-toggle="modal" data-target="#uploadFile">
-              <th scope="row">Bass Guitar</th>
-              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-            </tr>
-            <tr data-toggle="modal" data-target="#uploadFile">
-              <th scope="row">Drums</th>
-              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-            </tr>
-            <tr data-toggle="modal" data-target="#uploadFile">
-              <th scope="row">Rhythm Guitar</th>
-              <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <button id="add-instrument" type="button" class="btn btn-primary" data-toggle="modal"
-        data-target="#add-instrument">Add Instrument</button>
-    </div>
-    <div class="tab-pane fade" id="mixes" role="tabpanel" aria-labelledby="mixes-tab">...</div>
-    <div class="tab-pane fade" id="contributions" role="tabpanel" aria-labelledby="contributions-tab">...</div>
-    <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">...</div>
   </div>
 
   <script src="assets/js/jquery.min.js"></script>
