--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
   <meta charset="utf-8">
@@ -63,7 +63,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form>
+        <form id="update-instrument-form">
           <div class="modal-body">
             <div class="form-group">
               <label for="choosefile1">Choose File</label>
@@ -90,7 +90,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form>
+        <form id="add-instrument-form">
           <div class="modal-body">
             <div class="form-group">
               <label for="instrumentInput1">Instrument Name</label>
@@ -114,8 +114,10 @@
       <div id="studio-composition" class="table-responsive">
         <table class="table table-hover">
           <thead class="thead-dark">
-            <th scope="col">Instrument</th>
-            <th scope="col">Composition</th>
+            <tr>
+              <th scope="col">Instrument</th>
+              <th scope="col">Composition</th>
+            </tr>
           </thead>
           <tbody>
             <tr data-toggle="modal" data-target="#uploadFile">
@@ -137,17 +139,62 @@
           </tbody>
         </table>
       </div>
-      <button id="add-instrument" type="button" class="btn btn-primary" data-toggle="modal"
+      <button id="add-instrument-btn" type="button" class="btn btn-primary" data-toggle="modal"
         data-target="#add-instrument">Add Instrument</button>
     </div>
     <div class="tab-pane fade" id="mixes" role="tabpanel" aria-labelledby="mixes-tab">...</div>
-    <div class="tab-pane fade" id="contributions" role="tabpanel" aria-labelledby="contributions-tab">...</div>
+    <div class="tab-pane fade" id="contributions" role="tabpanel" aria-labelledby="contributions-tab">
+      <form id="approve-contributions-form">
+        <div id="studio-contributions" class="table-reponsive">
+          <table class="table">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">Instrument</th>
+                <th scope="col">Approve Contribution</th>
+                <th scope="col">Composition</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Lead Guitar</th>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="check-yes1">
+                    <label class="form-check-label" for="check-yes1">Yes</label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="check-no1">
+                    <label class="form-check-label" for="check-no1">No</label>
+                  </div>
+                </td>
+                <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+              </tr>
+              <tr>
+                <th scope="row">Bass Guitar</th>
+                <td>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="check-yes2">
+                    <label class="form-check-label" for="check-yes2">Yes</label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="check-no2">
+                    <label class="form-check-label" for="check-no2">No</label>
+                  </div>
+                </td>
+                <td><img src="assets/img/sheet-music.png" alt="sheet-music"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <button id="approve-contributions-btn" type="submit" class="btn btn-primary">Save Changes</button>
+      </form>
+    </div>
     <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
       <div id="studioSettings" class="container">
         <form>
           <div class="form-group">
             <label for="studio-name-input">Studio Name</label>
-            <input type="text" class="form-control" id="studio-name-input" placeholder="Studio"> </input>
+            <input type="text" class="form-control" id="studio-name-input" placeholder="Studio">
           </div>
           <div class="form-group">
             <label for="studio-visibilty">Studio Visibility</label>
