--- a/JamSesh/user-profile.html
+++ b/JamSesh/user-profile.html
@@ -19,7 +19,7 @@
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
         </ul>
         <span class="navbar-text actions">
-          <a class="btn btn-light action-button" role="button" href="#">Log Out</a>
+          <a class="btn btn-light action-button" role="button" href="homepage.html">Log Out</a>
         </span>
       </div>
     </div>
@@ -35,8 +35,8 @@
     <div class="container text-center studioSection">
       <!-- Find a way to not have this container move up whenever a stuido is added -->
       <h2 id="studioHeader">Your Studios</h2>
-      <p class="text-left studio">Studio_1</p>
-      <p class="text-left studio" >Studio_2</p>
+      <a href="studio.html"><p class="text-left studio">Studio_1</p></a>
+      <a href="studio.html"><p class="text-left studio">Studio_2</p></a>
     </div>
   </section>
 
