--- a/JamSesh/homepage.html
+++ b/JamSesh/homepage.html
@@ -39,7 +39,7 @@
           <div class="form-group" id="email"><input class="form-control" type="email" name="email" placeholder="Email"></div>
           <div class="form-group" id="password"><input class="form-control" type="password" name="password" placeholder="Password"></div>
           <div class="form-group" id="confirmPassword"><input class="form-control" type="password" name="password-repeat" placeholder="Password (repeat)"></div>
-          <div class="form-group"><button class="btn btn-primary btn-block" id="formButton" type="submit" href="user-profile.html"><a id="formLink" href="user-profile.html">Sign Up</a></button></div>
+          <div class="form-group"><a class="btn btn-primary btn-block" id="formButton" type="submit" href="user-profile.html" href="user-profile.html">Sign Up</a></div>
           <a class="already" href="login.html">You already have an account? Login here.</a></form>
         </div>
     </section>
