--- a/JamSesh/login.html
+++ b/JamSesh/login.html
@@ -35,7 +35,7 @@
           <h2 class="text-center" id="create">Login</h2>
           <div class="form-group" id="email"><input class="form-control" type="email" name="email" placeholder="Email"></div>
           <div class="form-group" id="password"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-          <div class="form-group"><button class="btn btn-primary btn-block" id="formButton" type="submit"><a id="formLink" href="user-profile.html">Log In</a></button></div>
+          <div class="form-group"><a class="btn btn-primary btn-block" id="formButton" type="submit" href="user-profile.html">Log In</a></div>
         </form>
       </div>
     </section>
