fixed tab border bug

--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -46,7 +46,7 @@
 
   <!-- Navbar Tabs -->
   <ul id="studio-navtabs" class="nav nav-tabs mb-3s" role="tablist">
-    <li class="nav-item">
+    <li id="first-tab" class="nav-item">
       <a class="nav-link active" id="composition-tab" data-toggle="tab" href="#composition" role="tab"
         aria-controls="composition" aria-selected="true">Composition</a>
     </li>
