--- a/JamSesh/user-profile.html
+++ b/JamSesh/user-profile.html
@@ -27,17 +27,48 @@
 
   <section class="d-xl-flex flex-row pad">
     <div class="d-flex flex-column text-center bio">
-      <!-- Find a way to remove style here -->
       <img src="assets/img/blank-avatar.png" class="pic">
       <p class="name">Username_1</p>
       <p class="subName">@Username_1</p>
       <a class="btn btn-light action-button changePic" role="button" href="#">Edit Profile</a>
+      <hr />
+      <div class="genreContainer d-flex flex-row">
+          <p class="btn btn-light action-button genres">Classical</p>
+          <p class="btn btn-light action-button genres">R&B</p>
+          <p class="btn btn-light action-button genres">Jazz</p>
+          <p class="btn btn-light action-button genres">Rock</p>
+          <p class="btn btn-light action-button genres">Pop</p>
+          <p class="btn btn-light action-button genres">Alternative</p>
+      </div>
     </div>
     <div class="d-flex flex-column text-center studioSection">
       <!-- Find a way to not have this container move up whenever a studio is added -->
-      <h2 id="studioHeader">Your Studios</h2>
-      <p class="text-left studio">Studio_1</p>
-      <p class="text-left studio" >Studio_2</p>
+      <div class="studioHeader d-flex flex-row">
+        <h2>Your Studios</h2>
+        <p class="btn btn-light action-button addStudio">New Studio</p>
+      </div>
+      <div class="studio">
+        <div class="studioTitle text-left">Studio 1</div>
+        <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</p>
+        <div class="studioGenres d-flex flex-row">
+          <p class="btn btn-light action-button genres">R&B</p>
+          <p class="btn btn-light action-button genres">Pop</p>        </div>
+      </div>
+      <div class="studio">
+        <div class="studioTitle text-left">Studio 2</div>
+        <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</p>
+        <div class="studioGenres d-flex flex-row">
+          <p class="btn btn-light action-button genres">Classical</p>
+        </div>
+      </div>
+      <div class="studio">
+        <div class="studioTitle text-left">Studio 3</div>
+        <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</p>
+        <div class="studioGenres d-flex flex-row">
+          <p class="btn btn-light action-button genres">Rock</p>
+          <p class="btn btn-light action-button genres">Pop</p>
+        </div>
+      </div>
     </div>
   </section>
 
