Font changes to admin page

--- a/JamSesh/admin.html
+++ b/JamSesh/admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Site Management</title>
+    <title>JamSesh - Admin Page</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Homepage-Nav.css">
     <link rel="stylesheet" href="assets/css/User-Profile.css">
@@ -20,7 +20,6 @@
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
         </ul>
         <span class="navbar-text actions" style="float: right;">
-          <strong>Content Creators</strong> Admin
           <a class="btn btn-light action-button" role="button" href="#">Log Out</a>
         </span>
       </div>
@@ -55,7 +54,7 @@
           <img src="assets/img/Access_demo.png">
         </div>
       </div>
-        
+
     </div>
   </div>
 
