Sudios on user profile link to studio page now

--- a/JamSesh/user-profile.html
+++ b/JamSesh/user-profile.html
@@ -47,28 +47,28 @@
         <h2>Your Studios</h2>
         <p class="btn btn-light action-button addStudio">New Studio</p>
       </div>
-      <div class="studio">
+      <a class="studio" href="studio.html">
         <div class="studioTitle text-left">Studio 1</div>
         <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</p>
         <div class="studioGenres d-flex flex-row">
           <p class="btn btn-light action-button genres">R&B</p>
           <p class="btn btn-light action-button genres">Pop</p>        </div>
-      </div>
-      <div class="studio">
+      </a>
+      <a class="studio" href="studio.html">
         <div class="studioTitle text-left">Studio 2</div>
         <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</p>
         <div class="studioGenres d-flex flex-row">
           <p class="btn btn-light action-button genres">Classical</p>
         </div>
-      </div>
-      <div class="studio">
+      </a>
+      <a class="studio" href="studio.html">
         <div class="studioTitle text-left">Studio 3</div>
         <p class="studioDescription text-left">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</p>
         <div class="studioGenres d-flex flex-row">
           <p class="btn btn-light action-button genres">Rock</p>
           <p class="btn btn-light action-button genres">Pop</p>
         </div>
-      </div>
+      </a>
     </div>
   </section>
 
