--- a/JamSesh/user-profile.html
+++ b/JamSesh/user-profile.html
@@ -19,7 +19,7 @@
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
         </ul>
         <span class="navbar-text actions">
-          <a class="btn btn-light action-button" role="button" href="#">Log Out</a>
+          <a class="btn btn-light action-button" role="button" href="homepage.html">Log Out</a>
         </span>
       </div>
     </div>
