added studio description to the studio page

--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -42,6 +42,14 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-7">
+        <p>
+          You can have a little paragraph here describing your project. It can be a
+          blurb like blah blah blah or something. You can write your own description if you want.
+        </p>
+      </div>
+    </div>
   </div>
 
   <!-- Navbar Tabs -->
@@ -276,6 +284,11 @@
               <option>Yes</option>
               <option>No</option>
             </select>
+          </div>
+          <div class="form-group">
+            <label for="studio-description-input">Edit Studio Description</label>
+            <textarea class="form-control" rows="3"
+              maxlength="255">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</textarea>
           </div>
           <button type="submit" class="btn btn-info">Save Changes</button>
         </form>
