removed about link from header

--- a/JamSesh/login.html
+++ b/JamSesh/login.html
@@ -2,40 +2,42 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>JamSesh - Login</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/Homepage-Nav.css">
-    <link rel="stylesheet" href="assets/css/Homepage.css">
-    <link rel="stylesheet" href="assets/css/Login.css">
+  <meta charset="utf-8">
+  <title>JamSesh - Login</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/Homepage-Nav.css">
+  <link rel="stylesheet" href="assets/css/Homepage.css">
+  <link rel="stylesheet" href="assets/css/Login.css">
 </head>
 
 <body>
   <!-- Try and remove the style from the line below -->
-    <div class="top" data-bs-parallax-bg="true" style="background: url(&quot;assets/img/teal.png&quot;);">
-      <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-        <div class="container"><a class="navbar-brand" href="homepage.html">JamSesh</a>
-          <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="nav navbar-nav mr-auto">
-              <li class="nav-item"><a class="nav-link active" href="homepage.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            </ul>
-            <span class="navbar-text actions">
-              <a class="login" href="#">Log In</a>
-              <a class="btn btn-light action-button" role="button" href="homepage.html">Sign Up</a>
-            </span>
-          </div>
+  <div class="top" data-bs-parallax-bg="true" style="background: url(&quot;assets/img/teal.png&quot;);">
+    <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
+      <div class="container"><a class="navbar-brand" href="homepage.html">JamSesh</a>
+        <div class="collapse navbar-collapse" id="navcol-1">
+          <ul class="nav navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link active" href="homepage.html">Home</a></li>
+          </ul>
+          <span class="navbar-text actions">
+            <a class="login" href="#">Log In</a>
+            <a class="btn btn-light action-button" role="button" href="homepage.html">Sign Up</a>
+          </span>
         </div>
-      </nav>
+      </div>
+    </nav>
 
     <section class="d-flex">
       <div class="text-center d-xl-flex justify-content-xl-center form-container">
         <form id="signupForm" method="post">
           <h2 class="text-center" id="create">Login</h2>
-          <div class="form-group" id="email"><input class="form-control" type="email" name="email" placeholder="Email"></div>
-          <div class="form-group" id="password"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-          <div class="form-group"><a class="btn btn-primary btn-block" id="formButton" type="submit" href="user-profile.html">Log In</a></div>
+          <div class="form-group" id="email"><input class="form-control" type="email" name="email" placeholder="Email">
+          </div>
+          <div class="form-group" id="password"><input class="form-control" type="password" name="password"
+              placeholder="Password"></div>
+          <div class="form-group"><a class="btn btn-primary btn-block" id="formButton" type="submit"
+              href="user-profile.html">Log In</a></div>
         </form>
       </div>
     </section>
