--- a/JamSesh/admin.html
+++ b/JamSesh/admin.html
@@ -16,7 +16,7 @@
     <div class="container"><a class="navbar-brand" href="#">JamSesh</a>
       <div class="collapse navbar-collapse" id="navcol-1">
         <ul class="nav navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <!-- <li class="nav-item"><a class="nav-link active" href="#">Home</a></li> -->
         </ul>
         <span class="navbar-text actions" style="float: right;">
           <a class="btn btn-light action-button" role="button" href="#">Log Out</a>
