--- a/JamSesh/homepage.html
+++ b/JamSesh/homepage.html
@@ -17,7 +17,7 @@
       <div class="container"><a class="navbar-brand" href="#">JamSesh</a>
         <div class="collapse navbar-collapse" id="navcol-1">
           <ul class="nav navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+            <!-- <li class="nav-item"><a class="nav-link active" href="#">Home</a></li> -->
           </ul>
           <span class="navbar-text actions">
             <a class="login" href="login.html">Log In</a>
