--- a/JamSesh/login.html
+++ b/JamSesh/login.html
@@ -18,7 +18,7 @@
       <div class="container"><a class="navbar-brand" href="homepage.html">JamSesh</a>
         <div class="collapse navbar-collapse" id="navcol-1">
           <ul class="nav navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link active" href="homepage.html">Home</a></li>
+            <!-- <li class="nav-item"><a class="nav-link active" href="homepage.html">Home</a></li> -->
           </ul>
           <span class="navbar-text actions">
             <a class="login" href="#">Log In</a>
