--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -16,7 +16,7 @@
     <div class="container"><a class="navbar-brand" href="user-profile.html">JamSesh</a>
       <div class="collapse navbar-collapse" id="navcol-1">
         <ul class="nav navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link active" href="user-profile.html">Home</a></li>
+          <!-- <li class="nav-item"><a class="nav-link active" href="user-profile.html">Home</a></li> -->
         </ul>
         <span class="navbar-text actions">
           <a class="btn btn-light action-button" role="button" href="homepage.html">Log Out</a>
@@ -40,6 +40,10 @@
           </form>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <p class="btn btn-light action-button genres">R&B</p>
+      <p class="btn btn-light action-button genres">Pop</p>
     </div>
     <div class="row">
       <div class="col-7">
@@ -288,6 +292,10 @@
             <label for="studio-description-input">Edit Studio Description</label>
             <textarea class="form-control" rows="3"
               maxlength="255">You can have a little paragraph here describing your project. It can be a blurb like blah blah blah or something. You can write your own description if you want.</textarea>
+          </div>
+          <div class="form-group">
+            <label for="studio-genres-input">Add Genres to the Studio</label>
+            <input type="text" class="form-control" id="studio-genres-input">
           </div>
           <button type="submit" class="btn btn-info">Save Changes</button>
         </form>
