--- a/JamSesh/user-profile.html
+++ b/JamSesh/user-profile.html
@@ -15,7 +15,7 @@
     <div class="container"><a class="navbar-brand" href="homepage.html">JamSesh</a>
       <div class="collapse navbar-collapse" id="navcol-1">
         <ul class="nav navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <!-- <li class="nav-item"><a class="nav-link active" href="#">Home</a></li> -->
         </ul>
         <span class="navbar-text actions">
           <a class="btn btn-light action-button" role="button" href="homepage.html">Log Out</a>
