--- a/JamSesh/homepage.html
+++ b/JamSesh/homepage.html
@@ -14,7 +14,7 @@
   <!-- Try and remove the style from the line below -->
   <div class="top" data-bs-parallax-bg="true" style="background: url(&quot;assets/img/teal.png&quot;);">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-      <div class="container"><a class="navbar-brand" href="#">JamSesh</a>
+      <div class="container"><a class="navbar-brand" href="homepage.html">JamSesh</a>
         <div class="collapse navbar-collapse" id="navcol-1">
           <ul class="nav navbar-nav mr-auto">
             <!-- <li class="nav-item"><a class="nav-link active" href="#">Home</a></li> -->
