changed href to userprofile instead of homepage

--- a/JamSesh/studio.html
+++ b/JamSesh/studio.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-    <div class="container"><a class="navbar-brand" href="homepage.html">JamSesh</a>
+    <div class="container"><a class="navbar-brand" href="user-profile.html">JamSesh</a>
       <div class="collapse navbar-collapse" id="navcol-1">
         <ul class="nav navbar-nav mr-auto">
           <!-- <li class="nav-item"><a class="nav-link active" href="user-profile.html">Home</a></li> -->
